--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       body {
         background-color: black;
         background-attachment: fixed;
-        background-image: url("polarbear.webp"), url("mushroom.webp"), url("penguin.webp");
-        background-repeat: no-repeat;
-        background-size: 10%;
-        background-position: 30% 50%, 45% 50%, 60% 50%;
+        background-image: url("polarbear.webp"), url("mushroom.webp"), url("penguin.webp"), url("stars.webp");
+        background-repeat: no-repeat, no-repeat, no-repeat, repeat;
+        background-size: 15%, 15%, 15%, auto;
+        background-position: 22.5% 60%, 42.5% 60%, 62.5% 60%, center;
         height: 100%;
         display: flex;
       }
@@ -18,7 +18,7 @@
         font-family: sans-serif;
         font-weight: bold;
         font-style: italic;
-        font-size: xxx-large;
+        font-size: 60pt;
         color: black;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
       }
