--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
       body {
         background-color: black;
         background-attachment: fixed;
-        background-image: url("polarbear.webp"), url("mushroom.webp"), url("penguin.webp"), url("stars.webp");
+        background-image: url("polarbear.webp"), url("penguin.webp"), url("mushroom.webp"), url("stars.webp");
         background-repeat: no-repeat, no-repeat, no-repeat, repeat;
-        background-size: 15%, 15%, 15%, auto;
-        background-position: 22.5% 60%, 42.5% 60%, 62.5% 60%, center;
+        background-size: auto 20%, auto 20%, auto 20%, auto;
+        background-position: 15% 50%, 85% 50%, 50% 70%, center;
         height: 100%;
-        display: flex;
       }
       marquee {
         position: absolute;
-        top: 30%;
+        top: 22%;
         font-family: sans-serif;
         font-weight: bold;
         font-style: italic;
-        font-size: 60pt;
+        font-size: 10vh;
         color: black;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
       }
