fix mobile scaling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         background-position: 15% 50%, 85% 50%, 50% 70%, center;
         height: 100%;
       }
+      @media (aspect-ratio <= 1) {
+        body {
+          background-position: 10% 50%, 90% 50%, 50% 75%, center;
+        }
+      }
       marquee {
         position: absolute;
         top: 22%;
