--- a/index.html
+++ b/index.html
@@ -3,37 +3,53 @@
   <head>
     <style type="text/css">
       body {
-        background-color: black;
         background-attachment: fixed;
+        background-color: black;
         background-image: url("polarbear.webp"), url("penguin.webp"), url("mushroom.webp"), url("stars.webp");
         background-repeat: no-repeat, no-repeat, no-repeat, repeat;
         background-size: auto 20%, auto 20%, auto 20%, auto;
         background-position: 15% 50%, 85% 50%, 50% 70%, center;
-        height: 100%;
+        overflow: hidden;
       }
-      @media (aspect-ratio <= 1) {
+      @media (orientation: portrait) {
         body {
           background-position: 10% 50%, 90% 50%, 50% 75%, center;
         }
       }
-      marquee {
+      div {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+      span {
         position: absolute;
         top: 22%;
-        font-family: sans-serif;
-        font-weight: bold;
-        font-style: italic;
-        font-size: 10vh;
+        font: italic bold 10vh sans-serif;
+        white-space: nowrap;
         color: black;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+        animation: 6s linear infinite marquee;
+      }
+      @keyframes marquee {
+        from {
+          left: 120%;
+        }
+        to {
+          left: 0%;
+          transform: translate(-100%, 0);
+        }
       }
     </style>
+    <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
     <title>
       welcome to my website !!!
     </title>
   </head>
   <body>
-    <marquee scrollamount=15>
-      welcome to my website !!!
-    </marquee>
+    <div>
+      <span>
+        welcome to my website !!!
+      </span>
+    </div>
   </body>
 </html>
